added mounting instruction for ft200 fan200 and efl3

--- a/EFL3.html
+++ b/EFL3.html
@@ -23,9 +23,11 @@ has_children: false
         </style>
     </head>
     <body>
-        <h2><a class="title"
-            href="https://www.hafele.com.de/en/product/furniture-lock-haefele-dialock-efl-3-3c-mains-operated-lock/0000015f0001e57b00020023/#SearchParameter=&@QueryTerm=efl3&@P.FF.followSearch=9690&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=46&PDP=true">
-            {{ page.title }}</a>
+        <h2><a class="title" href="https://www.hafele.com.de/en/product/
+            furniture-lock-haefele-dialock-efl-3-3c-mains-operated-lock/
+            0000015f0001e57b00020023/#SearchParameter=&@QueryTerm=efl3&@
+            P.FF.followSearch=9690&PageNumber=1&OriginalPageSize=12&
+            PageSize=12&Position=1&OrigPos=1&ProductListSize=46&PDP=true">{{ page.title }}</a>
         </h2>
         <table>
             <tr>
@@ -51,6 +53,7 @@ has_children: false
         <ul>
             <li><a href="\assets\EFL3\efl3-en.pdf">英文单页</a></li>
             <li><a href="\assets\EFL3\efl3-cn.pdf">中文单页</a></li>
+            <li><a href="\assets\EFL3\efl3_mounting.pdf">安装示意图</a></li>
         </ul>
         <div class="row">
             <div class="column"><img src="\assets\EFL3\EFL3.jpg" alt=""></div>
