--- a/FT200.html
+++ b/FT200.html
@@ -66,6 +66,8 @@ has_children: true
         <ul>
             <li><a href="/assets/FT200/catalog/pages_ch.pdf">中文单页</a></li>
             <li><a href="/assets/FT200/catalog/pages_en.pdf">英文单页</a></li>
+            <li><a href="\assets\FT200\ft200_mounting.pdf">FT200安装示意图</a></li>
+            <li><a href="\assets\FT200\fan200_mounting.pdf">读头FAN200安装示意图</a></li>
         </ul>
         <div class="responsive"><img src="/assets/FT200/FT200.jpg" alt=""></div>
         <script src="\js\lightbox-plus-jquery.js"></script>
