--- a/DT700.html
+++ b/DT700.html
@@ -38,9 +38,14 @@ has_children: true
                 <th>数量</th>
             </tr>
             <tr>
-                <td><a href="\assets\DT700\modules.html">前后模块</a></td>
-                <td id="module_number"></td>
-                <td>1套</td>
+                <td><a href="\assets\DT700\modules.html">前模块</a></td>
+                <td id="module_number_ouside"></td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td><a href="\assets\DT700\modules.html">后模块</a></td>
+                <td id="module_number">917.63.270</td>
+                <td>1</td>
             </tr>
             <tr>
                 <td><a href="\assets\DT700\lock.html">锁体</a></td>
