added note for choosing forend width

--- a/assets/DT700/lock.html
+++ b/assets/DT700/lock.html
@@ -52,6 +52,9 @@ nav_order: 2
             margin-top: 3%;
             margin-bottom: 1%;
         }
+        b {
+            color: brown;
+        }
     </style>
 </head>
 <body>
@@ -81,6 +84,7 @@ nav_order: 2
 
     <h3>选择锁体编号</h3>
     <p>锁边距 'A'，锁片外形，锁片宽度，开门方向和锁片颜色共同确定锁体编号。请使用以下选型问答确定您需订购的编号。</p>
+    <p>若订购锁片宽度为<b>20</b>的锁体，需单独订购挡片和锁舌盒。锁片宽度为<b>24</b>的锁体默认配备挡片和锁舌盒。</p>
     <div class="panel">
         <div class="question_container" id="question">
             questions go here.
@@ -106,6 +110,7 @@ nav_order: 2
 
         </div>
         <div class="result"></div>
+       
         <div class="navigation_container" id="navigation">
             <button class="navigation" id="last_one">上一题</button>
             <button class="navigation" id="try_again">重新选择</button>
