--- a/assets/DT700/modules.html
+++ b/assets/DT700/modules.html
@@ -125,7 +125,7 @@ nav_order: 1
         <img src="\assets\DT700\handle_J_real.jpg" alt="" id="handle_J_pop_up">
     </div>
 
-    <p>我们提供不锈钢原色，黑色，抛光黄铜色，抛光原色四种颜色，请使用以下选型问答确定前后模块的编号</p>
+    <p>我们提供不锈钢原色，黑色，抛光金色三种颜色，请使用以下选型问答确定前后模块的编号</p>
     <div class="panel">
         <div class="question-container" id="question">
             questions go here.
