disabled feature of component selection

--- a/FT200.html
+++ b/FT200.html
@@ -9,10 +9,13 @@ has_children: true
         <style>
             .responsive {float: right; width: 50%; height: auto;}
             .title {color: #991601;}
-            table {margin-top: 10%;}
+            table {margin-top: 5%;}
             .choices_container {
                 float: left;
                 padding-right: 1%
+            }
+            .choices_container {
+                display: none;
             }
             ul {
                 cursor: pointer;
@@ -77,7 +80,7 @@ has_children: true
                     ?MasterSKU=0000015f0002019a00010023">
                     连线/CC200</a>
                 </td>
-                <td id="cable_number"></td>
+                <td id="cable_number">237.59.022</td>
                 <td>1</td>
             </tr>
             <tr>
@@ -86,12 +89,12 @@ has_children: true
                     ?MasterSKU=0000015f000202f600010023">
                     读头/FAN200</a>
                 </td>
-                <td id="antenna_number"></td>
+                <td id="antenna_number">237.59.061</td>
                 <td>1</td>
             </tr>
             <tr>
                 <td><a href="/power-supply">电源</a></td>
-                <td id="power_number"></td>
+                <td id="power_number">833.02.999</td>
                 <td>1</td>
             </tr>
             <tr>
