--- a/FT200.html
+++ b/FT200.html
@@ -28,31 +28,6 @@ has_children: true
         P.FF.followSearch=8831&PageNumber=1&OriginalPageSize=12&PageSize=12&
         Position=1&OrigPos=1&ProductListSize=169&PDP=true">{{ page.title }}</a>
     </h2>
-    <div class="choices_container" id="cable" onmouseleave="disappear_list(list_cable)">
-        <button class="button_group" id="cable_button" onmouseenter="show_list(list_cable)">请选择连线长度（米）</button>
-        <ul id="cable_option">
-            <li><a onclick="fill_in_number_cable(this.innerHTML)">0.5</a></li>
-            <li><a onclick="fill_in_number_cable(this.innerHTML)">1</a></li>
-            <li><a onclick="fill_in_number_cable(this.innerHTML)">3</a></li>
-            <li><a onclick="fill_in_number_cable(this.innerHTML)">5</a></li>
-            <li><a onclick="fill_in_number_cable(this.innerHTML)">10</a></li>
-        </ul>
-    </div>
-    <div class="choices_container" id="antenna" onmouseleave="disappear_list(list_antenna)">
-        <button class="button_group" id="antenna_button" onmouseenter="show_list(list_antenna)">请选择读头线缆长度（米）</button>
-        <ul id="antenna_option">
-            <li><a onclick="fill_in_number_antenna(this.innerHTML)">1</a></li>
-            <li><a onclick="fill_in_number_antenna(this.innerHTML)">3</a></li>
-            <li><a onclick="fill_in_number_antenna(this.innerHTML)">5</a></li>
-        </ul>
-    </div>
-    <div class="choices_container" id="power" onmouseleave="disappear_list(list_power)">
-        <button class="button_group" id="power_button" onmouseenter="show_list(list_power)">请选择电源产地</button>
-        <ul id="power_option">
-            <li><a onclick="fill_in_number_power(this.innerHTML)">国产电源</a></li>
-            <li><a onclick="fill_in_number_power(this.innerHTML)">进口电源（德国）</a></li>
-        </ul>
-    </div
     <table>
         <caption>基础物料清单</caption>
         <tr>
@@ -76,7 +51,7 @@ has_children: true
                 ?MasterSKU=0000015f0002019a00010023">
                 连线/CC200</a>
             </td>
-            <td id="cable_number">237.59.022</td>
+            <td id="cable_number">237.59.022（3米）</td>
             <td>1</td>
         </tr>
         <tr>
@@ -85,7 +60,7 @@ has_children: true
                 ?MasterSKU=0000015f000202f600010023">
                 读头/FAN200</a>
             </td>
-            <td id="antenna_number">237.59.061</td>
+            <td id="antenna_number">237.59.061（3米连线）</td>
             <td>1</td>
         </tr>
         <tr>
