added words for page of loading-macro.html

--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -14,7 +14,8 @@ parent: app(HDM)
 <body>
     <h2>{{ page.title }}</h2>
     <p style="margin-top: 3%;">
-        Dialock二代家具锁支持导入客户指定的扩展功能。需要用到AKC, HMDM app和宏(add-on)文件。一套AKC包含三张卡片，编制时使用任意一张即可。如下视频展示了导入扩展功能的操作步骤。
+        Dialock二代家具锁支持导入客户指定的扩展功能。需要用到AKC, HMDM app和宏(add-on)文件。
+        一套AKC包含三张卡片，编制时使用任意一张即可。编制之前需先打开手机的蓝牙和NFC功能。如下视频展示了导入扩展功能的操作步骤。
     </p>
     <b>以下为中文操作视频</b>
     <div class="video-wrapper">
