added words to page of programming decoration key

--- a/assets/FT200/FT200-videos-decoration-key.html
+++ b/assets/FT200/FT200-videos-decoration-key.html
@@ -15,8 +15,9 @@ grand_parent: FT200
     <h2 class="title">{{page.title}}</h2>
     <p style="margin-top: 3%;">
         当设备正在报警（超时未将锁头锁闭），刷摆货卡可使报警声停止。若使用摆货卡将锁头打开，锁头超时未锁闭也不会激活蜂鸣器报警。
-        当店员需要摆货，将物品取出或清洁展示柜时可以使用摆货卡将柜门打开。
+        当店员需要长时间使锁头处于开启状态时（例如摆货，清洁展柜），可以使用摆货卡将柜门打开。
     </p>
+    <p>该视频展示了摆货卡的制作过程和使用效果。视频中出现的黑色卡片即为摆货卡。</p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=850478368&bvid=BV1XL4y1t7gA&cid=479263699&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
