--- a/assets/app-hdm/apk.html
+++ b/assets/app-hdm/apk.html
@@ -12,8 +12,11 @@ parent: app(HDM)
     <h3>使用以下方式获取安装文件</h3>
     <div class="responsive"><img src="/assets/app-hdm/HDM.jpg" alt="HDM image"></div>
     <ul>
-        <li>对于安卓(android)手机，请点击<a download href="/assets/app-hdm/apk/DialockManager-v0.9.68-497-(646)-management-pub-release.apk">
+        <li>对于安卓(android)手机，请点击<a download href="DialockManager-v0.9.66-461-(610)-management-pub-release.apk">
             此处</a>下载安装文件;</li>
         <li>对于苹果手机(Iphone)，请在苹果应用商店(App Store)搜索关键字'Hafele Dialock'，即可找到该安装文件。</li>
     </ul>
+    <p>该app中文翻译工作持续进行中，现已完成部分翻译工作。您可点击
+        <a download href="DialockManager-v0.9.68-497-(646)-management-pub-release.apk">此处</a>下载中文app
+    </p>
 </body>
