added akc notice link

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -58,6 +58,7 @@ has_children: true
             <button id="try_again">重新选择</button>
         </div>
     </div>
+    <p>海福乐人员下单后可以使用<a href="https://akc-notice.netlify.app/">该表格</a>通知产品部，表格提交后产品部会收到电子邮件</p>
     <script src="\js\lightbox-plus-jquery.js"></script>
     <script src="\js\add_on_ordering_workflow.js"></script>
 </body>
