--- a/FT200.html
+++ b/FT200.html
@@ -18,6 +18,7 @@ has_children: true
         }
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
+    <link rel="stylesheet" href="\css\ft200.css">
 </head>
 <body>
     <h2>
@@ -42,7 +43,12 @@ has_children: true
         </tr>
         <tr>
             <td><a href="/EFL3">锁头/EFL3</a></td>
-            <td>237.59.000</td>
+            <td>
+                <select name="" id="">
+                    <option value="">237.59.000（不带有反馈功能）</option>
+                    <option value="">237.59.001（带有反馈功能）</option>
+                </select>
+            </td>
             <td>1</td>
         </tr>
         <tr>
@@ -51,7 +57,15 @@ has_children: true
                 ?MasterSKU=0000015f0002019a00010023">
                 连线/CC200</a>
             </td>
-            <td id="cable_number">237.59.022（3米）</td>
+            <td>
+                <select name="" id="">
+                    <option value="">237.59.022（3米）</option>
+                    <option value="">237.59.020（0.5米）</option>
+                    <option value="">237.59.021（1米）</option>
+                    <option value="">237.59.023（5米）</option>
+                    <option value="">237.59.024（10米）</option>
+                </select>
+            </td>
             <td>1</td>
         </tr>
         <tr>
@@ -60,7 +74,13 @@ has_children: true
                 ?MasterSKU=0000015f000202f600010023">
                 读头/FAN200</a>
             </td>
-            <td id="antenna_number">237.59.061（3米连线）</td>
+            <td>
+                <select name="" id="">
+                    <option value="">237.59.061（3米连线）</option>
+                    <option value="">237.59.060（1米连线）</option>
+                    <option value="">237.59.062（5米连线）</option>
+                </select>
+            </td>
             <td>1</td>
         </tr>
         <tr>
