--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -5,16 +5,7 @@ parent: 功能扩展文件/Add-on
 grand_parent: app(HDM)
 ---
 <head>
-    <style>
-        .row {
-            display: flex;
-            flex-direction: row;
-        }
-        figcaption {
-            text-align: center;
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="\css\ft200_addon.css">
 </head>
 <body>
     <h3 style="margin-bottom: 3%;">请根据对应的AKC序列号，点击以下链接下载add-on</h3>
@@ -55,6 +46,8 @@ grand_parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 634.dlkAddon">634-636</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 640.dlkAddon">640-642</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 643.dlkAddon">643-645</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 622.dlkAddon">622-624(DM22009)</a></li>
+
     </ul>
     <p>请点击<a href="https://haefele-my.sharepoint.com/:f:/r/personal/chao_ye_hafele_com_cn/Documents/%E5%86%85%E9%83%A8%20HDM%20%E7%9B%B8%E5%85%B3%E8%B5%84%E6%96%99?csf=1&web=1&e=fhnJnV">此处</a>
         查看add-on备案记录（仅供内部使用）</p>
