--- a/assets/FT200/FT200_aux_output_alarm.html
+++ b/assets/FT200/FT200_aux_output_alarm.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 接入警报装置/aux-ouput for alarm
-parent: 扩展输出/aux-ouput
+parent: 扩展接口/aux-port
 grand_parent: FT200
 ---
 <head>
