corrected the description of aux input for door contact

--- a/assets/FT200/FT200_aux_input_door_contact.html
+++ b/assets/FT200/FT200_aux_input_door_contact.html
@@ -16,7 +16,7 @@ grand_parent: FT200
     <p style="margin-top: 3%;">
         FT200支持使用其扩展输入接口接收外部电路的输入信号。如下图展示了使用输入接口接收门磁信号，并同时启用输出接口。
         该视频设定控制器检测到刷卡十秒后未关门，发出警报提示。刷卡后开门，此时门磁回路断开。FT200默认刷卡后开锁时间持续三秒（该时间可调），
-        即万用表蜂鸣器响铃三秒。刷卡十秒后，外部电路（万用表）蜂鸣器开始响铃报警，关门后（门磁回路接通）响铃警报停止。
+        即万用表蜂鸣器响铃三秒。刷卡十秒后，控制器内置蜂鸣器开始响铃报警，关门后（门磁回路接通）响铃警报停止。
     </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=469799184&bvid=BV12T411V74t&cid=741754780&page=1" 
