added led acu port specification file

--- a/assets/FT200/FT200_aux_port.html
+++ b/assets/FT200/FT200_aux_port.html
@@ -34,6 +34,7 @@ has_children: true
                 <td>SM02B-SFHRS-TF</td>
             </tr>
         </table>
+        <p>请点击<a download href="\assets\FT200\eSFH.pdf">此处</a>下载LED和蜂鸣器接口的规格文件</p>
     </div>
    
 </body>
