added another add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -55,6 +55,8 @@ grand_parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 700.dlkAddon">700-702</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 703.dlkAddon">703-705</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22017-AlrmPrem FT200 AUX.Signed.FT200.000 628.dlkAddon">628-630(DM22017)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 706.dlkAddon">706-708</a></li>
+
 
     </ul>
     <p>请点击<a href="https://haefele-my.sharepoint.com/:f:/r/personal/chao_ye_hafele_com_cn/Documents/%E5%86%85%E9%83%A8%20HDM%20%E7%9B%B8%E5%85%B3%E8%B5%84%E6%96%99?csf=1&web=1&e=fhnJnV">此处</a>
