--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -56,6 +56,7 @@ grand_parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 703.dlkAddon">703-705</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22017-AlrmPrem FT200 AUX.Signed.FT200.000 628.dlkAddon">628-630(DM22017)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 706.dlkAddon">706-708</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 679.dlkAddon">679-681</a></li>
 
 
     </ul>
