added one ft200 pic to ft200 main page

--- a/FT200.html
+++ b/FT200.html
@@ -6,7 +6,7 @@ has_children: true
 ---
 <head>
     <style>
-        .responsive {float: right; width: 50%; height: auto;}
+        .responsive {float: right; width: 50%; height: auto; margin-top: 4em;}
         .title {color: #991601;}
         table {margin-top: 5%;}
         .choices_container {
@@ -16,6 +16,7 @@ has_children: true
         .choices_container {
             display: none;
         }
+        figcaption {color: #991601; text-align: center; font-size:large;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
     <link rel="stylesheet" href="\css\ft200.css">
@@ -101,6 +102,10 @@ has_children: true
         <li><a href="\assets\FT200\ft200_mounting.pdf">FT200安装示意图</a></li>
         <li><a href="\assets\FT200\fan200_mounting.pdf">读头FAN200安装示意图</a></li>
     </ul>
+    <figure>
+        <img src="\assets\FT200\ft200_config.jpg" alt="" srcset="">
+        <figcaption>FT200典型配置</figcaption>
+    </figure>
     <div class="responsive"><img src="/assets/FT200/FT200.jpg" alt=""></div>
     <script src="\js\lightbox-plus-jquery.js"></script>
     <script src="\js\ft200_components_selection.js"></script>
