changed the caption size from large to medium

--- a/FT200.html
+++ b/FT200.html
@@ -16,7 +16,7 @@ has_children: true
         .choices_container {
             display: none;
         }
-        figcaption {color: #991601; text-align: center; font-size:large;}
+        figcaption {color: #991601; text-align: center; font-size:medium;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
     <link rel="stylesheet" href="\css\ft200.css">
