added add-on files

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -73,7 +73,9 @@ grand_parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 919.dlkAddon">919-921</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 925.dlkAddon">925-927</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 934.dlkAddon">934-936</a></li>
-
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 892.dlkAddon">892-894(DM22009)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 922.dlkAddon">922-924</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 901.dlkAddon">901-903</a></li>
 
 
     </ul>
