make add-on lists displayed im multiple columns

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -4,11 +4,19 @@ title: FT200功能扩展
 parent: 功能扩展文件/Add-on
 grand_parent: app(HDM)
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dialock ft200 add-on</title>
     <link rel="stylesheet" href="\css\ft200_addon.css">
+    
+
 </head>
 <body>
-    <h3 style="margin-bottom: 3%;">请根据对应的AKC序列号，点击以下链接下载add-on</h3>
+    <h3 id="title">请根据对应的AKC序列号，点击以下链接下载add-on</h3>
     <ol>
         <li>'DM22005'可激活报警功能（以下未额外标注均为此宏文件）</li>
         <li>'DM22009'可激活报警功能和分别控制功能（读头#1->锁头#1和#2，读头#2->锁头#3和#4）</li>
@@ -24,7 +32,7 @@ grand_parent: app(HDM)
             <figcaption>读头侧</figcaption>
         </figure>
     </div>
-    <ul>
+    <ul id="add_on_list">
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC169-171_FT200.Signed.dlkAddon">169-171</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC175-177_FT200.Signed.dlkAddon.dlkAddon">175-177</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22005-166-168-AlrmPrem FT200.Signed.FT200.dlkAddon">166-168</a></li>
@@ -83,6 +91,8 @@ grand_parent: app(HDM)
 
     </ul>
     <p>请点击<a href="https://haefele-my.sharepoint.com/:f:/r/personal/chao_ye_hafele_com_cn/Documents/%E5%86%85%E9%83%A8%20HDM%20%E7%9B%B8%E5%85%B3%E8%B5%84%E6%96%99?csf=1&web=1&e=fhnJnV">此处</a>
-        查看add-on备案记录（仅供内部使用）</p>
+        查看add-on备案记录（仅供内部使用）
+    </p>
 </body>
+</html>
 
