--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -21,8 +21,9 @@ grand_parent: app(HDM)
     <h2 id="head">{{ page.title }}</h2>
     <p>您可以在该app中创建一个项目（虚拟店铺），进而将实体店铺中的设备加入其中，进行统一管理。如下视频向您展示了创建项目的步骤。</p>
     <div class="responsive">
-        <iframe src="//player.bilibili.com/player.html?aid=430619019&bvid=BV1FG411G7xK&cid=832355131&page=1" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+        <iframe src="//player.bilibili.com/player.html?aid=430619019&bvid=BV1FG411G7xK&cid=832355131&page=1&high_quality=1&danmaku=0" 
+        allowfullscreen="allowfullscreen" scrolling="no" frameborder="0" 
+        sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts" class="video"> </iframe>
     </div>
     <p>您也可以点击<a href="https://www.bilibili.com/video/BV1FG411G7xK?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
     至B站观看此视频</p>
