to make video full screen

--- a/assets/app-hdm/app_mode_replacing_keys.html
+++ b/assets/app-hdm/app_mode_replacing_keys.html
@@ -12,7 +12,7 @@ grand_parent: app(HDM)
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dialock replacing keys</title>
     <style>
-        .video {width: 100%; height: 100%; position: absolute; object-fit: cover;}
+        .video {width: 100%; height: 100%; position: absolute;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         #head {margin-bottom: 1em;}
     </style>
@@ -22,7 +22,7 @@ grand_parent: app(HDM)
     <p>使用Dialock的app模式，您可以针对某一张卡片进行删除和添加的操作，而无需对所有用户卡做统一操作。如下视频所示。</p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=730401311&bvid=BV1HD4y1q7TC&cid=831461612&page=1&high_quality=1&danmaku=0" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="allowfullscreen" class="video"> </iframe>
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen class="video"> </iframe>
     </div>
     <p>您也可以点击<a href="https://www.bilibili.com/video/BV1HD4y1q7TC?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
     至B站观看此视频</p>
