--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -27,5 +27,6 @@ grand_parent: app(HDM)
     </div>
     <p>您也可以点击<a href="https://www.bilibili.com/video/BV1FG411G7xK?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
     至B站观看此视频</p>
+    <script src="\js\video_full_screen.js"></script>
 </body>
 </html>
