added another add mode video

--- a/assets/app-hdm/app_mode_dashboard.html
+++ b/assets/app-hdm/app_mode_dashboard.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 创建项目（虚拟店铺）
+title: 控制面板
 parent: app模式/app mode
 grand_parent: app(HDM)
 ---
@@ -10,7 +10,7 @@ grand_parent: app(HDM)
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dialock creating project</title>
+    <title>dialock dashboard</title>
     <style>
         .video {width: 100%; height: 100%; position: absolute;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
@@ -20,13 +20,13 @@ grand_parent: app(HDM)
 </head>
 <body>
     <h2 id="head">{{ page.title }}</h2>
-    <p>您可以在该app中创建一个项目（虚拟店铺），进而将实体店铺中的设备加入其中，进行统一管理。如下视频向您展示了创建项目的步骤。</p>
+    <p>您可以在“控制面板”的界面中，看到待完成的任务。</p>
     <div class="responsive">
-        <iframe src="//player.bilibili.com/player.html?aid=430619019&bvid=BV1FG411G7xK&cid=832355131&page=1&high_quality=1&danmaku=0" 
+        <iframe src="//player.bilibili.com/player.html?aid=985535870&bvid=BV13t4y1j733&cid=833558894&page=1&high_quality=1&danmaku=0" 
         allowfullscreen scrolling="no" frameborder="0" 
         sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts" class="video"> </iframe>
     </div>
-    <p>您也可以点击<a href="https://www.bilibili.com/video/BV1FG411G7xK?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
+    <p>您也可以点击<a href="https://www.bilibili.com/video/BV13t4y1j733?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
     至B站观看此视频</p>
 </body>
 </html>
