--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -12,7 +12,7 @@ grand_parent: app(HDM)
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dialock creating project</title>
     <style>
-        .video {width: 100%; height: 100%; position: absolute;}
+        .video {width: 100%; height: 100%; position: absolute; object-fit: cover;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         #head {margin-bottom: 1em;}
     </style>
