--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -24,7 +24,8 @@ grand_parent: app(HDM)
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=430619019&bvid=BV1FG411G7xK&cid=832355131&page=1&high_quality=1&danmaku=0" 
             allowfullscreen scrolling="no" frameborder="0" 
-            sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts" class="video"> </iframe>
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            class="video"> </iframe>
         </div>
         <p>您也可以点击<a href="https://www.bilibili.com/video/BV1FG411G7xK?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
         至B站观看此视频</p>
